[package]
name = "flash-fe"
version = "0.1.1"
authors = ["kardeiz <kardeiz@gmail.com>"]

[dependencies]
iron = "0.2"
rustc-serialize = "0.3"
session-fe = { git = "https://github.com/kardeiz/session-fe" }

[dev-dependencies]
time = "*"
router = "*"
cookie-fe = { git = "https://github.com/kardeiz/cookie-fe" }
rand = "0.3.12"