[package]
name = "flash-fe"
version = "0.1.2"
authors = ["kardeiz <kardeiz@gmail.com>"]

[dependencies]
iron = ">= 0.3, <= 0.4"
session-fe = { git = "https://github.com/kardeiz/session-fe", default-features = false }

[dev-dependencies]
rustc-serialize = "0.3"
time = "*"
router = "*"
iron = "0.3"
cookie-fe = { git = "https://github.com/kardeiz/cookie-fe" }
session-fe = { git = "https://github.com/kardeiz/session-fe" }
rand = "0.3.12"